--- a/src/main/java/com/appgym/igu/Consulta.form
+++ b/src/main/java/com/appgym/igu/Consulta.form
@@ -233,6 +233,9 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto Medium" size="50" style="0"/>
                 </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="0" green="0" red="0" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Consulta Miembros"/>
                 <Property name="horizontalTextPosition" type="int" value="0"/>
               </Properties>
